--- a/style.css
+++ b/style.css
@@ -1,3 +1,8 @@
-html{
-	background-color: grey;
+body {
+	background-color: lightgray;
+}
+
+h1 {
+	background-color: white;
+	text-align: center;
 }
